[gd_scene load_steps=3 format=3 uid="uid://cuibvk4ffcht6"]

[ext_resource type="Script" path="res://addons/DualEditor/DualEditor.gd" id="1_1le1k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vtmcs"]

[node name="DualEditor" type="PanelContainer"]
z_index = 999
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_vtmcs")
script = ExtResource("1_1le1k")
metadata/_edit_vertical_guides_ = [-577.0, -313.0, -209.0]

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.298039, 0.298039, 0.298039, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
expand_mode = 1
stretch_mode = 2

[node name="Current_SubViewport" type="SubViewport" parent="."]
render_target_update_mode = 4

[node name="SubViewport_2D" type="SubViewport" parent="."]
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="SubViewport_3D" type="SubViewport" parent="."]
size = Vector2i(1280, 720)
render_target_update_mode = 4
